--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2059,14 +2059,11 @@
       }
     }
     async function getDynamicBassFill(idx, start=30, end=80) {
-      // flips the SW response along the target curve to ignore peaks and determine offset needed to bring SW response baseline to target
+      // flips the SW response to ignore peaks and determine offset needed to bring SW response baseline to target
       // note: always use the spatial average for this calculation as using MLP can overdo things
-      // note2: ensure idx is initially leveled to the target curve before running this function
-      const avgSPL = await getAvgSPL(idx, start, end);
-      await postNext('Smooth', idx, { smoothing: "Psy" }); // ensures that nulls don't drastically affect the flip
-      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / |A|", targetLevel: 2 * avgSPL});
-      await postNext('Smooth', idx, { smoothing: "1/48" }); // revert
-      const dynamicBassFill = -1 * await getExactTrim(flippedIdx, start, end);
+      const avgSPL = await getAvgSPL(idx, start, end, "1%2F6");
+      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / |A|", targetLevel: avgSPL});
+      const dynamicBassFill = await getAvgSPL(flippedIdx, start, end, "1%2F6");
       await postDelete(flippedIdx);
       return dynamicBassFill;
     }
