--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -526,7 +526,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.7</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v3.0.0</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -571,7 +571,7 @@
         <label>
           <input type="checkbox" id="dialogueEnhancer" onchange="updateCheckboxStates()">
           Dialogue enhancer
-          <span class="explanation">Emphasizes the vocal region of the center speaker. You must have a center speaker to use this option.</span>
+          <span class="explanation">Adjusts center channel timing and EQ to improve dialogue intelligibility. You must have a center speaker to use this option.</span>
         </label>
         <label>
           <input type="checkbox" id="noInversion" onchange="updateCheckboxStates()">
@@ -733,7 +733,7 @@
     let minXO = 40, maxXO = 250, previousDelay = null, swChannelCount = 0, dialogueEnhancer = false;
     const freqIndex = [40, 60, 80, 90, 100, 110, 120, 150, 200, 250]; // common denominator
     const customLevel = [], customDistance = [], customCrossover = [];
-    const mSec = [], invertSub = [], commandId = [], minDelayRangeSpan = 6;
+    const mSec = [], invertSub = [], commandId = [], minDelayRangeSpan = 6, haasOffset = 1;
     const m3dBPoints = {}, cmdIdIndices = {}, cmdIdFilterIndices = {};
     const cmdIdMLPIndices = {}, cmdIdAVGIndices = {};
     const cmdIdMLPIndicesEQ = {}, cmdIdAVGIndicesEQ = {};
@@ -1949,25 +1949,42 @@
       console.info("Initialized trims.");
     }
     async function timeAlignSpeakers() {
-      // note: only MLP positions are used since non-MLP will be cross corr aligned during spatial average
+      // note: only MLP positions are used, since non-MLP will be cross corr aligned during spatial average
       console.log("Time aligning speakers...");
       const mlpSPIndices = [];
-      const mlpSWIndices = [];
+      console.info("Starting...");
       for (let i = 1; i < commandId.length; i++) {
-        if (commandId[i].startsWith("SW")) {
-          mlpSWIndices.push(cmdIdIndices[commandId[i]][0]);
-        }
-        else {
-          mlpSPIndices.push(cmdIdIndices[commandId[i]][0]);
-        }
         mSec[i] = 0; // initialize
+        if (commandId[i].startsWith("SW")) {
+          continue; // SW alignment will be handled later, using excess phase
+        }
+        // use the midrange for speaker time alignment
+        console.infoUpdate(`Bandpassing the midrange of ${commandId[i]} for time alignment...`);
+        const mlpSPMidrange = await genBandpassedResponse(cmdIdIndices[commandId[i]][0], 500, 2000);
+        mlpSPIndices.push(mlpSPMidrange);
       }
-      // time align
+      console.infoUpdate("Bandpassed the midrange of all speakers for time alignment.");
+      // time align speakers only
+      console.info("Time aligning speakers using the bandpassed responses...");
       await postNext('Time align', mlpSPIndices);
       const measurements = await fetch_mREW();
       for (let i = 0; i < mlpSPIndices.length; i++) {
-        mSec[i + 1] -= measurements[mlpSPIndices[i]].cumulativeIRShiftSeconds;
+        let IRShift = measurements[mlpSPIndices[i]].cumulativeIRShiftSeconds;
+        if (commandId[i + 1] === "C" && dialogueEnhancer) {
+          console.warn(`Advancing center channel by ${haasOffset}ms to improve intelligibility (Haas effect).`);
+          IRShift += haasOffset / 1000;
+        }
+        mSec[i + 1] -= IRShift;
+        await postNext('Offset t=0', cmdIdIndices[commandId[i + 1]][0], {offset: IRShift, unit: "seconds"});
       }
+      console.infoUpdate("Time aligned all speakers using their bandpassed responses.");
+      // cleanup the bandpassed responses
+      console.info("Deleting processed measurements...");
+      for (let i = mlpSPIndices.length - 1; i >= 0; i--) {
+        console.infoUpdate(`Deleting processed measurements... remaining: ${i + 1}`);
+        await postDelete(mlpSPIndices[i]);
+      }
+      console.infoUpdate("Deleted processed measurements.");
       // store FL distance as reference for calculating other distances
       if (isAudy) {
         const flIndex = getFLIndexInCmdIdList();
@@ -1977,7 +1994,6 @@
         flDist = getFLDistFromAdy();
       }
       Object.freeze(flDist);
-      console.info("Time aligned speakers.");
     }
     async function initializeSubwoofers() {
       if (noSub) { return; }
@@ -2061,11 +2077,13 @@
     async function getDynamicBassFill(idx, start=30, end=80) {
       // flips the SW response to ignore peaks and determine offset needed to bring SW response baseline to target
       // note: always use the spatial average for this calculation as using MLP can overdo things
-      const avgSPL = await getAvgSPL(idx, start, end, "1%2F6");
-      await postNext('Smooth', idx, { smoothing: "1/48" }); // looks really messy after flipping, but works best
-      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / |A|", targetLevel: avgSPL});
-      const dynamicBassFill = await getAvgSPL(flippedIdx, start, end, "1%2F6");
-      await postDelete(flippedIdx);
+      const minPhaseIdx = await genMinimumPhaseResponse(idx);
+      const avgMinPhaseSPL = await getAvgSPL(minPhaseIdx, start, end);
+      await postNext('Smooth', minPhaseIdx, { smoothing: "1/48" }); // with min. phase, this flip seems to be the most precise
+      const flippedMPIdx = await postNext("Arithmetic", [minPhaseIdx, minPhaseIdx], {function: "1 / |A|", targetLevel: avgMinPhaseSPL});
+      const dynamicBassFill = await getAvgSPL(flippedMPIdx, start, end); // peaks are now dips, and linear power avg will ignore them
+      await postDelete(flippedMPIdx);
+      await postDelete(minPhaseIdx);
       return dynamicBassFill;
     }
     async function updateEQTargetSettings(mlpIdx, avgIdx, start, end, isSub) {
@@ -3221,7 +3239,7 @@
       // 4. Convert back to dB: 10 * log10(averageEnergy)
       return 10 * Math.log10(averageEnergy);
     }
-    async function getAvgSPL(idx, start, end, smoothing="Psy") {
+    async function getAvgSPL(idx, start, end, smoothing="Var") {
       // calculates average SPL between start and end frequencies
       const freqResponse = await fetchSafe(`frequency-response?smoothing=${smoothing}&ppo=96`, idx);
       const freqArray = response2array(freqResponse, start, end);
@@ -3452,6 +3470,15 @@
     }
     async function genExcessPhaseResponse(idx) {
       return await postNext('Excess phase version', idx, {
+        "include cal": false,
+        "append lf tail": false,
+        "append hf tail": false,
+        "frequency warping": false,
+        "replicate data": false
+      });
+    }
+    async function genMinimumPhaseResponse(idx) {
+      return await postNext('Minimum phase version', idx, {
         "include cal": false,
         "append lf tail": false,
         "append hf tail": false,
